--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@ changelog-seen = 2
 #
 # Note that many of the LLVM options are not currently supported for
 # downloading. Currently only the "assertions" option can be toggled.
-#download-ci-llvm = false
+download-ci-llvm = true
 
 # Indicates whether LLVM rebuild should be skipped when running bootstrap. If
 # this is `false` then the compiler's LLVM will be rebuilt whenever the built
@@ -54,7 +54,7 @@ changelog-seen = 2
 #skip-rebuild = false
 
 # Indicates whether the LLVM build is a Release or Debug build
-#optimize = true
+#optimize = false
 
 # Indicates whether LLVM should be built with ThinLTO. Note that this will
 # only succeed if you use clang, lld, llvm-ar, and llvm-ranlib in your C/C++
