--- a/config.toml
+++ b/config.toml
@@ -45,7 +45,7 @@ changelog-seen = 2
 #
 # Note that many of the LLVM options are not currently supported for
 # downloading. Currently only the "assertions" option can be toggled.
-download-ci-llvm = false
+#download-ci-llvm = false
 
 # Indicates whether LLVM rebuild should be skipped when running bootstrap. If
 # this is `false` then the compiler's LLVM will be rebuilt whenever the built
@@ -54,7 +54,7 @@ download-ci-llvm = false
 #skip-rebuild = false
 
 # Indicates whether the LLVM build is a Release or Debug build
-#optimize = false
+#optimize = true
 
 # Indicates whether LLVM should be built with ThinLTO. Note that this will
 # only succeed if you use clang, lld, llvm-ar, and llvm-ranlib in your C/C++
@@ -92,7 +92,7 @@ download-ci-llvm = false
 #static-libstdcpp = true
 
 # Whether to use Ninja to build LLVM. This runs much faster than make.
-ninja = true
+#ninja = true
 
 # LLVM targets to build support for.
 # Note: this is NOT related to Rust compilation targets. However, as Rust is
@@ -273,7 +273,7 @@ ninja = true
 # which are used to install Rust and Cargo together. This is disabled by
 # default. The `tools` option (immediately below) specifies which tools should
 # be built if `extended = true`.
-extended = true
+#extended = false
 
 # Installs chosen set of extended tools if `extended = true`. By default builds
 # all extended tools except `rust-demangler`, unless the target is also being
@@ -302,7 +302,7 @@ extended = true
 # Arguments passed to the `./configure` script, used during distcheck. You
 # probably won't fill this in but rather it's filled in by the `./configure`
 # script.
-#configure-args = []
+configure-args = []
 
 # Indicates that a local rebuild is occurring instead of a full bootstrap,
 # essentially skipping stage0 as the local compiler is recompiling itself again.
@@ -336,7 +336,7 @@ extended = true
 [install]
 
 # Instead of installing to /usr/local, install to this path instead.
-prefix = "build"
+#prefix = "/usr/local"
 
 # Where to install system configuration files
 # If this is a relative path, it will get installed in `prefix` above
@@ -645,7 +645,7 @@ prefix = "build"
 # Each of the following options is scoped to the specific target triple in
 # question and is used for determining how to compile each target.
 # =============================================================================
-[target.x86_64-unknown-linux-gnu]
+[target.'x86_64-unknown-linux-gnu']
 
 # C compiler to be used to compile C code. Note that the
 # default value is platform specific, and if not specified it may also depend on
@@ -779,3 +779,4 @@ prefix = "build"
 #
 # This list must be non-empty.
 #compression-formats = ["gz", "xz"]
+
