--- a/config.toml
+++ b/config.toml
@@ -273,7 +273,7 @@ changelog-seen = 2
 # which are used to install Rust and Cargo together. This is disabled by
 # default. The `tools` option (immediately below) specifies which tools should
 # be built if `extended = true`.
-#extended = false
+extended = true
 
 # Installs chosen set of extended tools if `extended = true`. By default builds
 # all extended tools except `rust-demangler`, unless the target is also being
@@ -336,7 +336,7 @@ configure-args = []
 [install]
 
 # Instead of installing to /usr/local, install to this path instead.
-#prefix = "/usr/local"
+prefix = "build"
 
 # Where to install system configuration files
 # If this is a relative path, it will get installed in `prefix` above
